Correct manifest paths

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "content_scripts": [
         {
             "matches": ["*://*/*"],
-            "js": ["unamericanize.js"],
+            "js": ["out/unamericanize.js"],
             "run_at": "document_end"
         }
     ],
